# llmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO_LORA.md  Dockerfile  LOG.md  PLAN.md  README.md  RESULTS_LORA.md  config.6x4090.json  config.example.json  config.lora.example.json  config.test-checkpoint.json  config.test-cudasuspend.json  config.test-s3.json  config.test-sleep-fast.json  config.test-sleep.json  config.test-tp2.json  depot.json  justfile  test-docker-patches.sh  test-patches-baremetal.sh  validate-all.sh
.github/workflows/: ci.yaml  release-plz.yaml  release.yaml
configs/: config.example.json  config.test-checkpoint.json  config.test-sleep.json
docs/: getting-started.md  scheduling-problem.md
examples/podman-criu/: README.md  config.yaml  warmup.sh
fuzz/: 00_restart.sh  01_warmup.sh  02_single_model_load.sh  03_switch_under_load.sh  04_rapid_alternation.sh  05_burst_during_switch.sh  06_streaming_during_switch.sh  07_high_intensity.sh  08_rapid_switch_storm.sh  09_metrics_report.sh  10_repro_l2_wake_failure.sh  11_extreme_load.sh  12_back_to_back_switches.sh  13_abandoned_streams.sh  14_mega_storm.sh  15_double_switch_race.sh  16_flood_during_sleep.sh  17_vllm_overload.sh  18_context_pressure.sh  19_endurance.sh  20_l2_wake_stress.sh  20b_l2_wake_debug.sh  20c_l2_multi_cycle.sh  21_final_validation.sh  benchmark.sh  common.sh  compare_benchmarks.py
fuzz/benchmark_results/: cost_aware_20260206_124604.json  cost_aware_baseline_20260206_162014.json  cost_aware_v2_20260206_125852.json  cost_aware_v3_20260206_133034.json  cost_aware_v4_20260206_134802.json  fifo_20260206_122157.json  time_slice_20260206_162921.json  time_slice_v2_20260206_164647.json
patches/: fix-mxfp4-reload-v0.15.1.patch  fix-reload-weights-tp-v0.15.1.patch  fix-sleep-mode-v0.15.1.patch  nccl-suspend-resume-v0.13.0.patch  nccl-suspend-resume-v0.15.1.patch
reports/: LOG.md  switching-efficiency.md
sglangmux/: Cargo.toml
sglangmux/src/: lib.rs
sglangmux/tests/: sglangmux_integration.rs
src/: config.rs  control.rs  cost.rs  hooks.rs  lib.rs  main.rs  middleware.rs  object_store.rs  orchestrator.rs  policy.rs  proxy.rs  switcher.rs  telemetry.rs  types.rs  validate.rs
src/orchestrator/: criu.rs  cuda.rs  mod.rs  process.rs  vllm.rs
src/policy/: cost_aware.rs  fifo.rs  mod.rs  time_slice.rs
tests/: e2e.rs  integration_test.rs  policy_sim.rs
