[package]
name = "llmux"
version = "0.9.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/doublewordai/llmux"
description = "Zero-reload model switching for vLLM - manages multiple models on shared GPU"

[[bin]]
name = "llmux"
path = "src/main.rs"

[[bin]]
name = "mock-vllm"
path = "src/bin/mock_vllm.rs"

[dependencies]
onwards = "0.11"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
axum = "0.8.4"
bytes = "1.10"
clap = { version = "4.5.40", features = ["derive", "env"] }
dashmap = "6.1.0"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.3"
hyper = "1.0"
hyper-util = { version = "0.1.0", features = ["client", "client-legacy", "http1", "tokio"] }
libc = "0.2"
metrics = "0.24"
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["json"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time", "process", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2"
