[package]
name = "llmux"
version = "2.4.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/doublewordai/llmux"
description = "Hook-driven LLM model multiplexer with pluggable switch policy"

[[bin]]
name = "llmux"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "2.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time", "process", "io-util"] }
tower = { version = "0.5", features = ["util"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
