[package]
name = "sglangmux"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["macros", "process", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.13.0"
